<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fname">First name:</string>
    <string name="lname">Last name:</string>
    <string name="search">Search</string>
    <string name="app_name">LibraryClient</string>
    <string name="author_search_dialog">Insert at least one search parameter</string>
    <string name="ok">OK</string>
    <string name="no_query_alert">Empty query!</string>
    <string name="no_author">Author not found!</string>
    <string name="searching">Searching!</string>
    <string name="search_query">Search query: </string>
    <string name="results_count">Results count: </string>
    <string name="book_header">Author: </string>
    <string name="books_found">Books found: </string>
    <string name="loading">Loading!</string>
    <string name="book_lang">Language: </string>
    <string name="book_format">Format: </string>
    <string name="book_size">Size: </string>
    <string name="download_connecting">Connecting...</string>
    <string name="download_downloading">Dowloading file: </string>
    <string name="download_finished">Download finished!</string>
    <string name="download_error">Catched exception: </string>
    <string name="download_error_response">Bad server response: </string>
    <string name="download_error_bad_book">Got not *.zip file from server. </string>
    <string name="search_note">Note: search is case sensitive</string>
    <string name="search_limit_note">Maximum result count: </string>
    <string name="author_search_limit">50</string>
    <string name="view_button">View</string>
    <string name="annotation_not_found">Annotation not found!</string>
</resources>
