<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <TextView
  	android:id="@+id/book_title"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center_horizontal"
  	/>
  	<LinearLayout
  		android:orientation="horizontal"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		>
  		<TextView
  			android:text="@string/book_lang"
  			android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		/>
  		<TextView
		  	android:id="@+id/book_lang"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:layout_marginRight="10px"
		  	/>
		<TextView
  			android:text="@string/book_format"
  			android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		/>
		<TextView
		  	android:id="@+id/book_format"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	android:layout_gravity="center_horizontal"
		  	android:layout_weight="1"
		  	/>
		<TextView
  			android:text="@string/book_size"
  			android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		/>
		<TextView
		  	android:id="@+id/book_size"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
	</LinearLayout>
</LinearLayout>
