<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <LinearLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:orientation="horizontal"
  	>
  		<TextView
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/book_header"
  			/>
	  <TextView
	  	android:id="@+id/book_header"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:gravity="center"
	  	android:layout_weight="1"
	  	/>
	  <Button
	  	android:id="@+id/view_button" 
    	android:text="@string/view_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>
	  </LinearLayout>
	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="horizontal"
  		>
  		<TextView
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/books_found"
  			/>
  		<TextView
  			android:id="@+id/books_count"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_weight="1"
  			/>
  	</LinearLayout>
  <ListView
  	android:id="@+id/book_list"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_weight="1"
  	/>
</LinearLayout>